# huff-ast

./: Cargo.toml  README.md
src/: example.sol  lib.rs  main.rs  prelude.rs  script.sh
src/ast/: blocks.rs  node.rs  statements.rs  types.rs
src/definitions/: ast_definitions.rs
src/frontend/: mod.rs
src/frontend/huff/: mod.rs  sol_gen.rs
src/frontend/solidity/: huff_gen.rs  mod.rs
src/gen_ast/: ast.rs  ir_huff.rs  mod.rs
src/ir_generation/: irgenrator.rs  mod.rs
