[package]
name = "huff-ast"
version = "0.1.0"
authors = ["malik <aremumalik05@gmail.com"]
edition = "2021"

[lib]
name = "huff_ast"
path = "src/lib.rs"
edition = "2021"

[dependencies]
codemap = "0.1.3"
ethers-rs = "0.2.3"
ethers-solc = "2.0.11"
eyre = "0.6.8"
serde_json = "1.0.108"
syn-solidity = "0.5.4"
